--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .menu-button {
-  background-color: #F54F36;
+  background-color: #f54f36;
   color: white;
   border: none;
   padding: 0.6vw 1.2vw;
@@ -72,8 +72,8 @@ h3 {
   font-family: "Raleway", Helvetica, Arial, sans-serif;
 }
 
-h1{
-  color: #FFFFFF;
+h1 {
+  color: #ffffff;
   /* font-weight: 800 !important; */
   font-size: 4.5vw !important;
   padding-bottom: 5px;
@@ -82,23 +82,25 @@ h1{
   font-weight: bold;
 }
 
-h2{
+h2 {
   color: #2c3d4f !important;
   letter-spacing: 5px;
   line-height: 2vw !important;
   font-size: 2.9vw !important;
 }
 
-h3{
+h3 {
   font-size: 1.6vw !important;
 }
-h4{
+
+h4 {
   text-transform: uppercase;
   color: #70777d !important;
   font-weight: bold !important;
   font-size: 1.3vw !important;
   margin: 0 !important;
 }
+
 header {
   background-image: url(public/developer.jpg);
   height: 99vh;
@@ -112,30 +114,31 @@ header {
   height: -webkit-fill-available;
 }
 
-.padd{
+.padd {
   padding: 4.5vw !important;
   padding-top: 2.5rem !important;
 }
 
-.about{
+.about {
   padding-left: 8vw !important;
   padding-right: 8vw !important;
 }
-.titles{
+
+.titles {
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding-bottom: 5rem;
 }
 
-.grayy{
+.grayy {
   backdrop-filter: contrast(0.6) brightness(0.5);
 }
 
-.logo{
+.logo {
   padding: 1.5rem;
 
-  .img-responsive{
+  .img-responsive {
     width: 12%;
   }
 }
@@ -149,14 +152,12 @@ header {
   width: 23vw;
   /* height: 100px; */
   border-radius: 50%;
-  box-shadow: 0 0 0 5px #151515,
-              inset 0 0 0 5px #000000,
-              inset 0 0 0 5px #000000,
-              inset 0 0 0 5px #000000,
-              inset 0 0 0 5px #000000,;
+  box-shadow: 0 0 0 5px #151515, inset 0 0 0 5px #000000,
+    inset 0 0 0 5px #000000, inset 0 0 0 5px #000000, inset 0 0 0 5px #000000;
   background: white;
   overflow: hidden;
   animation: mvTop 1.5s;
+
   img {
     width: 100%;
     height: 100%;
@@ -168,11 +169,11 @@ header {
 
 /********************************************************ABOUT ME SECTION**********************************************************/
 
-section{
+section {
   padding-top: 14vw;
   /* margin-top: 12vw; */
 
-  .border{
+  .border {
     display: block;
     background-color: #2c3d4f !important;
     margin: 4vw auto;
@@ -180,27 +181,30 @@ section{
     height: 0.3vw !important;
   }
 }
-p{
+
+p {
   margin-bottom: 0% !important;
-  
 }
-.para{
+
+.para {
   text-align: left;
   padding-bottom: 1.5vw;
 }
-.first{
+
+.first {
   font-weight: bold;
   color: #7e878f;
   padding: 5px;
   font-size: 1.1vw;
 }
-.second{
+
+.second {
   color: #7e868e;
   padding: 5px;
   font-size: 1vw;
 }
 
-.info{
+.info {
   display: flex;
   margin-bottom: 0px !important;
   align-items: flex-start;
@@ -221,57 +225,68 @@ a.mt-button {
   justify-content: space-evenly;
   width: 17vw;
 }
+
 .btn {
-  background-color: #F54F36 !important;
+  background-color: #f54f36 !important;
 }
+
 .btn {
   background-image: none;
   border-color: rgba(0, 0, 0, 0.1);
   box-shadow: none;
-  color: #FFFFFF !important;
+  color: #ffffff !important;
   text-shadow: none;
   font-weight: bold !important;
 }
+
 .large {
   font-size: 1vw !important;
   line-height: 1.4vw !important;
   padding: 1vw 1.8vw !important;
 }
-.fa-brands:hover{
-  color: #F54F36;
+
+.fa-brands:hover {
+  color: #f54f36;
 }
+
 .grid-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1.3vw;
   padding: 2vw;
 
-  .circleBase:hover{
+  .circleBase:hover {
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   }
-  .circle:hover{
+
+  .circle:hover {
     transform: scale(1.08);
-    .second, i{
-  
+
+    .second,
+    i {
       color: whitesmoke !important;
     }
-    background: #F54F36  ;
+
+    background: #f54f36;
   }
 }
+
 .circleBase {
   display: flex;
   align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  justify-content: center;
+  flex-direction: column;
   border-radius: 50%;
-  transition: transform .5s;
+  transition: transform 0.5s;
 }
+
 .circle {
   width: 7.8vw;
   height: 7.8vw;
   background: #e9e9e9;
+
   /* border: 1px solid #000; */
-  i{
+  i {
     height: 2.6vw;
     font-size: 2.2vw;
     color: #8b8b91;
@@ -282,86 +297,102 @@ a.mt-button {
   width: 5.5vw;
   height: 5.5vw;
   background: #ffffff;
+
   /* border: 1px solid #000; */
-  i{
+  i {
     /* height: 2.6rem; */
     font-size: 2.5vw;
-    color: #F54F36;
+    color: #f54f36;
   }
 }
-.ifont{
-  i{
+
+.ifont {
+  i {
     padding: 0.2rem;
-  font-size: 1.5vw;
+    font-size: 1.5vw;
+  }
 }
-}
-.about2{
+
+.about2 {
   display: flex;
   gap: 3vw;
 }
 
 /********************************************************MILESTONE SECTION**********************************************************/
 
-.milestone{
+.milestone {
   color: whitesmoke;
   background-image: url(public/milestones.jpg);
   background-attachment: fixed !important;
   background-repeat: no-repeat;
   background-size: cover;
 }
-.mileflex{
+
+.mileflex {
   padding-top: 4vw !important;
   display: flex;
-    gap: 2vw;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+  gap: 2vw;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
-.mileicon{
+
+.mileicon {
   display: flex;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
   gap: 7vw;
 }
-.up ,.ups{
+
+.up,
+.ups {
   font-size: 1.2vw;
   text-align: center;
   font-weight: 800 !important;
   font-family: "Raleway", Helvetica, Arial, sans-serif;
   padding-top: 1.2vw;
 }
-.low{
+
+.low {
   font-size: 1vw;
   font-weight: 500 !important;
 }
 
 /********************************************************SERVICES SECTION**********************************************************/
 
-.services ,.clients ,.contact{
+.services,
+.clients,
+.contact {
   padding-top: 1.5rem;
 }
-.serviceflex{
+
+.serviceflex {
   display: flex;
   gap: 4vw;
 }
-.left{
+
+.left {
   text-align: end;
   width: 50%;
 }
-.right{
+
+.right {
   text-align: start;
   width: 50%;
 }
-.leftflex{
+
+.leftflex {
   display: flex;
   align-items: center;
   gap: 1vw;
 }
-.gapping{
+
+.gapping {
   display: flex;
   flex-direction: column;
   gap: 3vw;
 }
+
 /* .lefttext{
   display: flex;
     flex-direction: column;
@@ -371,16 +402,18 @@ a.mt-button {
 .squarebase {
   display: flex;
   align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  justify-content: center;
+  flex-direction: column;
   border-radius: 8%;
 }
+
 .square {
   width: 5.5vw;
   height: 5.5vw;
-  background: #F54F36;
+  background: #f54f36;
+
   /* border: 1px solid #000; */
-  i{
+  i {
     /* height: 2.6rem; */
     font-size: 2.1vw;
     color: white;
@@ -389,7 +422,8 @@ a.mt-button {
 
 /********************************************************WORK PROCESS SECTION**********************************************************/
 
-.workprocess ,.quates{
+.workprocess,
+.quates {
   color: whitesmoke;
   background-image: url(public/work.jpg);
   background-attachment: fixed !important;
@@ -397,44 +431,49 @@ a.mt-button {
   background-size: cover;
 }
 
-.workprocess{
-  .square{
+.workprocess {
+  .square {
     width: 8.5vw;
     background: none;
     border: 2px solid;
   }
-  .mileicon{
+
+  .mileicon {
     gap: 0;
   }
-  .ups{
+
+  .ups {
     padding-top: 0%;
     padding-bottom: 1.2vw;
   }
 }
-.lines{
+
+.lines {
   display: flex;
-  .ver{
+
+  .ver {
     display: block;
     background-color: #eceff3 !important;
     /* margin: 10px auto; */
     width: 2vw;
     height: 2px !important;
   }
-  .ver2{
+
+  .ver2 {
     display: block;
     background-color: #eceff3 !important;
     margin-top: 70%;
     width: 2vw;
     height: 2px !important;
   }
-  .hor{
+
+  .hor {
     display: block;
     background-color: #eceff3 !important;
     /* margin: 10px auto; */
     width: 2px;
     height: 3vw !important;
   }
-
 }
 
 /******************************************************** CLIENTS ********************************************************************/
@@ -460,13 +499,15 @@ a.mt-button {
 
 /******************************************************* QUATES SECTION *************************************************************/
 
-.quates{
+.quates {
   background-image: url(public/quate.jpg);
-  h3{
-    font-size:large !important;
+
+  h3 {
+    font-size: large !important;
     line-height: 2.2rem !important;
   }
-  .border{
+
+  .border {
     display: block;
     background-color: #eceff3 !important;
     margin: 10px auto;
@@ -482,10 +523,13 @@ a.mt-button {
   flex-direction: row;
   gap: 3vw;
 }
-.form{
+
+.form {
   padding-top: 3rem;
 }
-.form input[type="text"], textarea {
+
+.form input[type="text"],
+textarea {
   color: #999999;
   font-size: 14px;
   text-transform: uppercase;
@@ -501,6 +545,7 @@ a.mt-button {
   -webkit-transition: all 0.2s linear;
   -o-transition: all 0.2s linear;
 }
+
 textarea {
   color: #999999;
   font-size: 14px;
@@ -517,221 +562,302 @@ textarea {
   -webkit-transition: all 0.2s linear;
   -o-transition: all 0.2s linear;
 }
+
 /* #submit{
   padding-top: 2rem;
 } */
- .contdata{
+.contdata {
   display: flex;
   justify-content: space-between;
- }
+}
+
 .form input.btn[type="submit"] {
   text-align: center;
   text-transform: uppercase;
   width: 100%;
   /* margin-bottom: 100px; */
   outline: none;
-  color: #FFFFFF;
+  color: #ffffff;
   padding: 2vw;
 }
+
 .form textarea {
   height: 174px;
   resize: none;
   margin-bottom: 1rem;
 }
 
-footer{
+footer {
   background: #f0f2f4;
 }
 
-.scales{
-  transition: transform .3s;
+.scales {
+  transition: transform 0.3s;
 }
-.scales:hover{
+
+.scales:hover {
   transform: scale(1.1);
 }
-.sign{
-  height: 3vw
+
+.sign {
+  height: 3vw;
 }
+
 @media only screen and (max-width: 600px) {
   body {
     background-color: lightblue;
   }
-  h1{
+
+  h1 {
     font-size: 8.2vw !important;
   }
-  h2{
+
+  h2 {
     font-size: 5vw !important;
   }
-  h3{
-    font-size: 4.4vw !important;
+
+  h3 {
+    font-size: 4.8vw !important;
   }
-  h4{
+
+  h4 {
     font-size: 4vw !important;
   }
-  header{
+
+  header {
     height: 50vh;
+
     .img-responsive {
       width: 21% !important;
     }
-    .menu-button{
+
+    .menu-button {
       font-size: 4vw;
     }
   }
-  .ifont{
-    i{
+
+  .ifont {
+    i {
       font-size: 4vw;
     }
   }
+
   .avatar-holder {
     width: 30vw;
     bottom: 15vw;
   }
-  .about2{
+
+  .about {
+    h2 {
+      padding-bottom: 3vw;
+    }
+
+    h4 {
+      padding: 2vw 0;
+    }
+  }
+
+  .about2 {
     flex-direction: column-reverse;
-    gap: 0;
-    .grid-container{
+    gap: 2vw;
+
+    .grid-container {
       grid-template-columns: repeat(2, 1fr);
       gap: 4.3vw;
       justify-items: center;
     }
-    .circle{
+
+    .circle {
       width: 22vw;
       height: 22vw;
-      i{
+
+      i {
         height: 9.6vw;
         font-size: 8vw;
       }
     }
   }
-  .milestone{
-    .mileicon{
+
+  .milestone {
+    .mileicon {
       column-gap: 0;
       flex-wrap: wrap;
     }
-    .circleBase{
+
+    .circleBase {
       width: 50%;
     }
-    .scircle{
+
+    .scircle {
       width: 16.5vw;
       height: 16.5vw;
-      i{
+
+      i {
         font-size: 8.5vw;
       }
     }
-    .up{
+
+    .up {
       font-size: 4.5vw !important;
     }
-    .low{
+
+    .low {
       font-size: 3.5vw !important;
+    }
+
+    .mileflex {
+      padding-top: 10vw !important;
+      padding-bottom: 10vw !important;
+      gap: 5vw;
     }
   }
 
-  .services{
-    .left, .right{
+  .services {
+
+    .left,
+    .right {
       text-align: center;
     }
-    .leftflex{
+
+    .leftflex {
       flex-direction: column-reverse;
     }
-    .rightflex{
+
+    .rightflex {
       flex-direction: column;
     }
-    .paddmobile{
+
+    .paddmobile {
       padding-top: 1.4rem;
     }
-    .gapping{
+
+    .gapping {
       gap: 4.5vw;
     }
+
     .square {
       width: 12.5vw;
       height: 12.5vw;
-      i{
+
+      i {
         font-size: 6.5vw;
       }
     }
   }
 
   .workprocess {
-    .hor{
+    .hor {
       height: 3.6vw !important;
     }
+
     .square {
-        width: 11.5vw;
-        height: 8vw;
-        i{
-          font-size: 4.5vw !important;
-        }
+      width: 11.5vw;
+      height: 8vw;
+
+      i {
+        font-size: 4.5vw !important;
+      }
     }
-}
-  .up, .ups{
+
+    .mileflex {
+      padding-top: 10vw !important;
+      padding-bottom: 10vw !important;
+      gap: 5vw;
+    }
+  }
+
+  .up,
+  .ups {
     font-size: 2.5vw;
   }
-  .low{
+
+  .low {
     font-size: 3.5vw;
   }
-  .sign{
+
+  .sign {
     height: 8vw;
   }
-  a.mt-button{
+
+  a.mt-button {
     width: 42vw;
     font-size: 3vw !important;
   }
-  .first{
+
+  .first {
     font-size: 4vw;
   }
-  .second{
+
+  .second {
     font-size: 4vw;
   }
-  .clients{
-    .brands{
+
+  .clients {
+    .border{
+      margin-bottom: 6vw;
+    }
+    .brands {
       grid-template-columns: repeat(auto-fit, minmax(95px, 1fr));
     }
   }
-  .brands__item img  {
-      height: 16vw;
-    }
-    .form input[type="text"], textarea {
-      width: 100%;
-      height: 11vw;
-      padding: 2vw 3%;
-    }
-    .form textarea {
-      height: 104px;
-    }
-    .quates {
-      h3 {
-          font-size: medium !important;
-          line-height: 3.2vh !important;
-      }
+
+  .brands__item img {
+    height: 16vw;
   }
+
+  .form input[type="text"],
+  textarea {
+    width: 100%;
+    height: 11vw;
+    padding: 2vw 3%;
+  }
+
+  .form textarea {
+    height: 104px;
+  }
+
+  .quates {
+    h3 {
+      font-size: medium !important;
+      line-height: 3.2vh !important;
+    }
+  }
+
   .contactus {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
-    .leftflex{
+
+    .leftflex {
       padding: 2vw 0;
       gap: 2vw;
       text-align: center;
       flex-direction: column;
-      h4{
+
+      h4 {
         font-size: 4.5vw !important;
       }
-      p{
+
+      p {
         font-size: 4vw !important;
       }
     }
-    .second{
+
+    .second {
       padding: 0%;
     }
+
     .square {
       width: 14.5vw;
       height: 14.5vw;
-      i{
+
+      i {
         font-size: 5.5vw !important;
       }
     }
   }
-  .contdata{
+
+  .contdata {
     flex-direction: column;
-   }
+  }
 }
